--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.example.cent"
+    namespace "com.cent.music"  // ⚠️ هنا تحديد الباكيج
     compileSdkVersion 34
     
     compileOptions {
@@ -43,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.cent"
+        applicationId "com.cent.music"  // ⚠️ هنا أيضاً
         minSdkVersion 21
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
