--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,74 +2,196 @@ name: Build Cent APK
 
 on:
   push:
+    branches: [ main, master ]
+  pull_request:
     branches: [ main ]
-  workflow_dispatch:
+  workflow_dispatch:  # للتفعيل اليدوي
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
     
     steps:
+    # 1. جلب الكود
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Setup Java
+    # 2. إعداد Java
+    - name: Setup Java JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         
+    # 3. إعداد Flutter
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.19.0'
         channel: 'stable'
         
-    - name: Fix audio_kernel.dart errors
-      run: |
-        # إصلاح event.state إلى event.processingState
-        sed -i 's/event\.state == ja\.ProcessingState\.idle/event.processingState == ja.ProcessingState.idle/g' lib/core/audio_kernel.dart
-        
-        # إصلاح ListQueue إلى List
-        sed -i 's/final _playlist = ListQueue<AudioTrack>();/final List<AudioTrack> _playlist = [];/g' lib/core/audio_kernel.dart
-        sed -i 's/final _originalPlaylist = ListQueue<AudioTrack>();/final List<AudioTrack> _originalPlaylist = [];/g' lib/core/audio_kernel.dart
-        
-        # حذف قسم export في النهاية
-        sed -i '/^\/\/ Export key components/,/^FFTProcessor;/d' lib/core/audio_kernel.dart
-        
+    # 4. إصلاح AndroidManifest.xml
     - name: Fix AndroidManifest.xml
       run: |
-        # حذف package من AndroidManifest.xml
-        sed -i '/package="[^"]*"/d' android/app/src/main/AndroidManifest.xml
-        
-        # إضافة label إذا لم يكن موجوداً
-        if ! grep -q 'android:label="Cent Music"' android/app/src/main/AndroidManifest.xml; then
+        # تأكد من وجود الملف
+        if [ -f "android/app/src/main/AndroidManifest.xml" ]; then
+          # حذف package من AndroidManifest.xml
+          sed -i '/package="[^"]*"/d' android/app/src/main/AndroidManifest.xml
+          
+          # حذف الأيقونة المخصصة (إذا كانت موجودة)
+          sed -i '/android:icon="@mipmap\/ic_launcher"/d' android/app/src/main/AndroidManifest.xml
+          
+          # تأكيد اسم التطبيق
+          if ! grep -q 'android:label="Cent Music"' android/app/src/main/AndroidManifest.xml; then
             sed -i 's/android:label="[^"]*"/android:label="Cent Music"/g' android/app/src/main/AndroidManifest.xml
+          fi
+          
+          echo "✅ AndroidManifest.xml fixed"
+        else
+          echo "⚠️ AndroidManifest.xml not found, creating new one"
+          mkdir -p android/app/src/main
+          cat > android/app/src/main/AndroidManifest.xml << 'EOF'
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    
+    <application
+        android:label="Cent Music"
+        android:name="\${applicationName}"
+        android:allowBackup="true"
+        android:supportsRtl="true">
+        
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:theme="@style/LaunchTheme"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize">
+            
+            <meta-data
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"/>
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2"/>
+    </application>
+</manifest>
+EOF
         fi
         
-    - name: Update build.gradle namespace
+    # 5. إصلاح build.gradle
+    - name: Fix build.gradle
       run: |
-        # تأكيد namespace في build.gradle
-        sed -i 's/namespace "com\.example\.cent"/namespace "com.cent.music"/g' android/app/build.gradle
-        sed -i 's/applicationId "com\.example\.cent"/applicationId "com.cent.music"/g' android/app/build.gradle
+        # تحديث namespace و applicationId
+        if [ -f "android/app/build.gradle" ]; then
+          sed -i 's/namespace "com\.example\.[^"]*"/namespace "com.cent.music"/g' android/app/build.gradle
+          sed -i 's/applicationId "com\.example\.[^"]*"/applicationId "com.cent.music"/g' android/app/build.gradle
+          
+          # تأكد من وجود minSdkVersion 21
+          if ! grep -q 'minSdkVersion 21' android/app/build.gradle; then
+            sed -i 's/minSdkVersion [0-9]*/minSdkVersion 21/g' android/app/build.gradle
+          fi
+          
+          echo "✅ build.gradle fixed"
+        fi
         
+        # إضافة jcenter إلى android/build.gradle
+        if [ -f "android/build.gradle" ]; then
+          if ! grep -q 'jcenter()' android/build.gradle; then
+            sed -i '/repositories {/a\        jcenter()' android/build.gradle
+            sed -i '/allprojects {/,/}/ {
+              /repositories {/a\        jcenter()
+            }' android/build.gradle
+          fi
+        fi
+        
+    # 6. إصلاح audio_kernel.dart (إذا كان موجوداً)
+    - name: Fix audio_kernel.dart
+      run: |
+        if [ -f "lib/core/audio_kernel.dart" ]; then
+          # إصلاح event.state إلى event.processingState
+          sed -i 's/event\.state == ja\.ProcessingState\.idle/event.processingState == ja.ProcessingState.idle/g' lib/core/audio_kernel.dart
+          
+          # إصلاح ListQueue إلى List
+          sed -i 's/final _playlist = ListQueue<AudioTrack>();/final List<AudioTrack> _playlist = [];/g' lib/core/audio_kernel.dart
+          sed -i 's/final _originalPlaylist = ListQueue<AudioTrack>();/final List<AudioTrack> _originalPlaylist = [];/g' lib/core/audio_kernel.dart
+          
+          # حذف قسم export في النهاية (إن وجد)
+          sed -i '/^\/\/ ============================================/,/^FFTProcessor;/d' lib/core/audio_kernel.dart
+          
+          echo "✅ audio_kernel.dart fixed"
+        fi
+        
+    # 7. إنشاء local.properties
     - name: Create local.properties
       run: |
         echo "sdk.dir=$ANDROID_HOME" > android/local.properties
         echo "flutter.sdk=$FLUTTER_ROOT" >> android/local.properties
         echo "flutter.versionName=1.0.0" >> android/local.properties
         echo "flutter.versionCode=1" >> android/local.properties
+        echo "flutter.buildMode=release" >> android/local.properties
         
+    # 8. تثبيت التبعيات
     - name: Get Flutter dependencies
       run: |
+        flutter clean
         flutter pub get
+        flutter pub upgrade --major-versions
         
-    - name: Build APK
+    # 9. التحقق من Flutter
+    - name: Verify Flutter
       run: |
-        flutter build apk --release --no-tree-shake-icons
+        flutter doctor -v
+        flutter analyze
         
-    - name: Upload APK
+    # 10. بناء APK
+    - name: Build APK (Release)
+      run: |
+        flutter build apk --release \
+          --no-tree-shake-icons \
+          --split-per-abi
+          
+    # 11. رفع الملفات الناتجة
+    - name: Upload APK artifacts
       uses: actions/upload-artifact@v4
       with:
         name: cent-music-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
+        path: |
+          build/app/outputs/flutter-apk/app-release.apk
+          build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
+          build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+        retention-days: 30
+        
+    # 12. إظهار معلومات التحميل
+    - name: Show download info
+      if: success()
+      run: |
+        echo "🎵 ==========================================="
+        echo "✅ BUILD SUCCESSFUL!"
+        echo "📱 APK files are available in the Artifacts tab"
+        echo "📦 Files generated:"
+        echo "   - app-release.apk (universal)"
+        echo "   - app-armeabi-v7a-release.apk (32-bit)"
+        echo "   - app-arm64-v8a-release.apk (64-bit)"
+        echo "🎵 ==========================================="
+        
+    # 13. في حالة الفشل
+    - name: Upload logs on failure
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-logs
+        path: |
+          flutter.log
+          build.log
+        retention-days: 1
