--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    namespace "com.cent.music"  // ⚠️ هنا تحديد الباكيج
+    namespace "com.cent.music"
     compileSdkVersion 34
     
     compileOptions {
@@ -43,18 +43,19 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.cent.music"  // ⚠️ هنا أيضاً
+        applicationId "com.cent.music"
         minSdkVersion 21
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
             signingConfig signingConfigs.debug
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false  # ⚠️ غيّر من true إلى false
+            shrinkResources false  # ⚠️ غيّر من true إلى false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -66,4 +67,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
