--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,18 +33,49 @@ jobs:
           if ! grep -q 'android:label="Cent Music"' android/app/src/main/AndroidManifest.xml; then
             sed -i 's/android:label="[^"]*"/android:label="Cent Music"/g' android/app/src/main/AndroidManifest.xml
           fi
-          echo "✅ AndroidManifest.xml fixed"
         fi
         
-    - name: Update build.gradle
+    - name: Fix build.gradle (Disable R8)
       run: |
         if [ -f "android/app/build.gradle" ]; then
+          # تحديث namespace و applicationId
           sed -i 's/namespace "com\.example\.[^"]*"/namespace "com.cent.music"/g' android/app/build.gradle
           sed -i 's/applicationId "com\.example\.[^"]*"/applicationId "com.cent.music"/g' android/app/build.gradle
+          
+          # تعطيل minifyEnabled و shrinkResources
+          sed -i 's/minifyEnabled true/minifyEnabled false/g' android/app/build.gradle
+          sed -i 's/shrinkResources true/shrinkResources false/g' android/app/build.gradle
+          
+          # تأكيد minSdkVersion 21
           if ! grep -q 'minSdkVersion 21' android/app/build.gradle; then
             sed -i 's/minSdkVersion [0-9]*/minSdkVersion 21/g' android/app/build.gradle
           fi
-          echo "✅ build.gradle fixed"
+          
+          # إضافة multiDexEnabled
+          if ! grep -q 'multiDexEnabled true' android/app/build.gradle; then
+            sed -i '/defaultConfig {/a\        multiDexEnabled true' android/app/build.gradle
+          fi
+        fi
+        
+    - name: Update ProGuard rules
+      run: |
+        if [ -f "android/app/proguard-rules.pro" ]; then
+          # إضافة قواعد Play Core المفقودة
+          cat >> android/app/proguard-rules.pro << 'EOF'
+
+# Play Core Libraries (Missing classes fix)
+-keep class com.google.android.play.core.** { *; }
+-keep class com.google.android.play.** { *; }
+-dontwarn com.google.android.play.**
+
+# YouTube Explode support
+-keep class com.github.** { *; }
+-dontwarn com.github.**
+
+# Additional Flutter support
+-keep class androidx.lifecycle.** { *; }
+-keep class com.google.android.material.** { *; }
+EOF
         fi
         
     - name: Create local.properties
@@ -56,9 +87,11 @@ jobs:
       run: |
         flutter pub get
         
-    - name: Build APK
+    - name: Build APK with no R8
       run: |
-        flutter build apk --release
+        flutter build apk --release \
+          --no-tree-shake-icons \
+          --split-per-abi
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
