--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,19 @@ jobs:
           # إضافة قواعد Play Core المفقودة
           cat >> android/app/proguard-rules.pro << 'EOF'
 
+# Play Core Libraries (Missing classes fix)
+-keep class com.google.android.play.core.** { *; }
+-keep class com.google.android.play.** { *; }
+-dontwarn com.google.android.play.**
+
+# YouTube Explode support
+-keep class com.github.** { *; }
+-dontwarn com.github.**
+
+# Additional Flutter support
+-keep class androidx.lifecycle.** { *; }
+-keep class com.google.android.material.** { *; }
+EOF
         fi
         
     - name: Create local.properties
