--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,16 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.17.0 <3.4.0'  # توسيع للتوافق مع Dart 3.3.0 وإصدارات audio_session القديمة
+  sdk: '>=3.0.0 <4.0.0'  # توسيع ليشمل Dart 3.5.3 (Flutter 3.24+) ويحافظ على توافق عام
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # Audio Engine - إصدارات متوافقة مع Dart 3.3.0
-  just_audio: ^0.9.36  # إصدار مستقر ومتوافق، يدعم Dart 3.3.0
-  audio_session: ^0.1.18  # إصدار يعمل مع Dart >=2.17 <3.3 (متوافق مع Flutter الحالي)
-  rxdart: ^0.27.7  # متوافق
+  # Audio - إصدارات حديثة متوافقة مع Dart 3.5+
+  just_audio: ^0.10.5
+  audio_session: ^0.2.2
+  rxdart: ^0.28.0
 
   # UI & Design
   google_fonts: ^6.2.1
@@ -26,10 +26,10 @@ dependencies:
   crypto: ^3.0.5
   permission_handler: ^11.3.1
 
-  # YouTube Integration (إذا كنت تستخدمه لاحقًا)
+  # YouTube (اختياري، لكن حدث إذا كنت تستخدم)
   youtube_explode_dart: ^2.2.2
 
-  # State Management
+  # State
   provider: ^6.1.2
 
 dev_dependencies:
@@ -39,10 +39,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # أضف assets/fonts إذا كان لديك
+  # أضف assets/fonts إذا أردت
   # assets:
   #   - assets/images/
-  # fonts:
-  #   - family: Michroma
-  #     fonts:
-  #       - asset: fonts/Michroma-Regular.ttf
