--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,21 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'  # متوافق مع Dart 3.5.3 (Flutter 3.24.x)
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # Audio - إصدارات متوافقة مع Dart 3.5.3
-  just_audio: ^0.9.46     # أحدث متوافق مع Dart <3.6 (من اقتراح الخطأ)
-  audio_session: ^0.1.25  # متوافق مع Dart 3.5.3
-  rxdart: ^0.27.7         # متوافق مع الإصدارات القديمة
+  # Audio - إصدارات متوافقة مع Flutter 3.24.3 / Dart 3.5.3
+  just_audio: ^0.9.46
+  audio_session: ^0.1.25
+  rxdart: ^0.27.7
 
   # UI & Design
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
-  flutter_spinkit: ^5.2.1
+  flutter_spinkit: ^5.2.1  # خفض إلى 5.2.1 لتجنب withValues error (5.2.2 يحتاج Flutter أحدث)
   cached_network_image: ^3.4.0
 
   # System & Permissions
@@ -39,9 +39,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - assets/images/
-  # fonts:
-  #   - family: Michroma
-  #     fonts:
-  #       - asset: fonts/Michroma-Regular.ttf
