--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   # UI & Design
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
-  flutter_spinkit: ^5.2.1  # 5.2.1 لا يستخدم withValues (5.2.2 يسبب الخطأ)
+  flutter_spinkit: ^5.2.1  # 5.2.1 لا يحتوي على withValues (يستخدم withOpacity القديم)
   cached_network_image: ^3.4.0
 
   # System & Permissions
