--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Audio - متوافق مع Flutter 3.24.3
+  # Audio
   just_audio: ^0.9.46
   audio_session: ^0.1.25
   rxdart: ^0.27.7
@@ -18,7 +18,7 @@ dependencies:
   # UI & Design
   google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
-  flutter_spinkit: ^5.2.1  # ← هذا الخفض يحل الخطأ تماماً (5.2.1 لا يستخدم withValues)
+  flutter_spinkit: ^5.2.1  # ← الخفض هنا يحل الخطأ (5.2.1 متوافق مع Flutter 3.24.3)
   cached_network_image: ^3.4.0
 
   # System & Permissions
@@ -26,7 +26,7 @@ dependencies:
   crypto: ^3.0.5
   permission_handler: ^11.3.1
 
-  # YouTube (اختياري)
+  # YouTube
   youtube_explode_dart: ^2.2.2
 
   # State
