--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,34 @@
-name: Build Cent APK
+name: Android CI
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ "main", "master" ]
+  pull_request:
+    branches: [ "main", "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.24.3'  # أحدث stable في 2026
-          channel: 'stable'
-          cache: true
-          cache-key: flutter-pub-${{ hashFiles('**/pubspec.lock') }}
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-      - name: Install dependencies
-        run: flutter pub get
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
 
-      - name: Build APK (release, split per ABI)
-        run: flutter build apk --release --split-per-abi --no-tree-shake-icons
-
-      - name: Upload APKs
-        uses: actions/upload-artifact@v4
-        with:
-          name: cent-music-apks
-          path: build/app/outputs/flutter-apk/*.apk
-          if-no-files-found: error
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
+        
