--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Flutter Build APK
 
 on:
   push:
@@ -13,22 +13,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: set up JDK 17
+    - name: Set up Java
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: 'any'
+        channel: 'stable'
 
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug
+    - name: Get dependencies
+      run: flutter pub get
+
+    - name: Build APK
+      run: flutter build apk --debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
-        name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: debug-apk
+        path: build/app/outputs/flutter-apk/app-debug.apk
         
