--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-    - name: Set up Java
-      uses: actions/setup-java@v3
+    - name: Set up Java 17
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: gradle
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: 'any'
         channel: 'stable'
+        cache: true
 
     - name: Get dependencies
       run: flutter pub get
@@ -31,9 +34,11 @@ jobs:
     - name: Build APK
       run: flutter build apk --debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Upload APK Artifact
+      uses: actions/upload-artifact@v4
       with:
         name: debug-apk
         path: build/app/outputs/flutter-apk/app-debug.apk
+        if-no-files-found: error
+        retention-days: 7
         
