--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: cent
-description: Cent Music - Professional Audio Streaming Application
+name: smart_music_app_cent
+description: A new Flutter project.
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -9,33 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # Audio
-  just_audio: ^0.9.46
-  audio_session: ^0.1.25
-  rxdart: ^0.27.7
-
-  # UI & Design
-  google_fonts: ^6.2.1
-  cupertino_icons: ^1.0.8
-  flutter_spinkit: ^5.2.1  # ← الخفض هنا يحل الخطأ (5.2.1 متوافق مع Flutter 3.24.3)
-  cached_network_image: ^3.4.0
-
-  # System & Permissions
-  path_provider: ^2.1.4
-  crypto: ^3.0.5
-  permission_handler: ^11.3.1
-
-  # YouTube
-  youtube_explode_dart: ^2.2.2
-
-  # State
-  provider: ^6.1.2
+  cupertino_icons: ^1.0.6
+  just_audio: ^0.9.36
+  audio_service: ^0.18.12
+  on_audio_query: ^2.8.2
+  permission_handler: ^11.0.1
+  path_provider: ^2.1.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+  
