--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-name: Flutter Build APK
+name: Build APK
 
 on:
   push:
-    branches: [ "main", "master" ]
-  pull_request:
     branches: [ "main", "master" ]
 
 jobs:
@@ -11,34 +9,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up Java 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: 'any'
         channel: 'stable'
-        cache: true
 
-    - name: Get dependencies
-      run: flutter pub get
+    - name: Repair Project
+      run: |
+        flutter clean
+        flutter pub get
 
-    - name: Build APK
+    - name: Build Debug APK
       run: flutter build apk --debug
 
-    - name: Upload APK Artifact
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: debug-apk
+        name: smart-music-apk
         path: build/app/outputs/flutter-apk/app-debug.apk
-        if-no-files-found: error
-        retention-days: 7
         
