--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Auto-Repair and Build
 
 on:
   push:
@@ -7,9 +7,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+
+    - name: Run Python Auto-Repair
+      run: python repo_fixer.py  # هنا يقوم البايثون بإصلاح كل شيء قبل البدء
 
     - name: Set up Java 17
       uses: actions/setup-java@v4
@@ -21,19 +23,15 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: 'any'
-        channel: 'stable'
 
-    - name: Repair Project
+    - name: Build APK
       run: |
-        flutter clean
         flutter pub get
-
-    - name: Build Debug APK
-      run: flutter build apk --debug
+        flutter build apk --debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: smart-music-apk
+        name: smart-music-fixed
         path: build/app/outputs/flutter-apk/app-debug.apk
         
