--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    # هذه الخطوة هي التي تشغل الملف الذي أنشأته للتو
     - name: Run Python Auto-Repair
-      run: python repo_fixer.py  # هنا يقوم البايثون بإصلاح كل شيء قبل البدء
+      run: python repo_fixer.py
 
     - name: Set up Java 17
       uses: actions/setup-java@v4
@@ -22,7 +23,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'any'
+        flutter-version: '3.19.0' # تم تحديد نسخة مستقرة لضمان عدم التعارض
 
     - name: Build APK
       run: |
@@ -32,6 +33,6 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: smart-music-fixed
+        name: smart-music-app
         path: build/app/outputs/flutter-apk/app-debug.apk
         
