--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,14 @@ dependencies:
   cupertino_icons: ^1.0.6
   just_audio: ^0.9.36
   audio_service: ^0.18.12
+  audio_session: ^0.1.18
+  rxdart: ^0.27.7
   on_audio_query: ^2.8.2
   permission_handler: ^11.0.1
   path_provider: ^2.1.1
+  crypto: ^3.0.3
   get: ^4.6.6
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
